--- a/food.html
+++ b/food.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-  <title>Food of Nagaland</title>
+  <title>Food of Assam </title>
   <style>
     body {
       font-family: 'Open Sans', sans-serif;
@@ -38,31 +38,37 @@
 </head>
 <body>
 
-  <h1>Famous Foods of Nagaland</h1>
+  <h1>Famous Foods of Assam</h1>
 
   <div class="food">
-    <h2>Smoked Pork</h2>
-    <img src="../../images/ap/khar.jpg" alt="Smoked Pork" width="400">
+    <h2>Kachori</h2>
+    <img src="../../images/ap/khar.jpg" alt="Kachori" width="400">
     
 <p>
-    Smoked Pork is one of the most loved traditional dishes of Nagaland. It is made by curing pork over a wood fire for several days, which gives it a rich smoky flavor and helps in preservation.
+    Kachori is a popular and iconic snack in Uttar Pradesh, known for its crispy, flaky crust and spicy, flavorful fillings. Often enjoyed as a breakfast item or street food, it is served hot with aloo sabzi (spiced potato curry) and tangy chutneys, making it an irresistible treat.
 
-The smoked pork is often cooked with dry bamboo shoots, axone (fermented soybean), or local herbs and chilies. It is usually enjoyed with steamed rice and is an essential part of Naga feasts and daily meals.
+There are many varieties, but the most famous is the “Banarasi Kachori”, stuffed with spiced lentils or urad dal, deep-fried to golden perfection. In cities like Varanasi, Mathura, and Kanpur, mornings begin with the tempting aroma of fresh kachoris from local shops.
 
-This dish reflects the Naga people's love for natural ingredients, smoked flavors, and traditional cooking techniques.
-</p>
+Kachori is more than just food—it’s a cultural experience, often paired with jalebi for a sweet-and-spicy combo, and enjoyed during festivals, family gatherings, and temple offerings.
+
+Whether eaten on a bustling street corner or at a traditional home kitchen, kachori captures the bold and hearty flavors of Uttar Pradesh.
+
+
+ </p>
   </div>
 
   <div class="food">
-    <h2> Bamboo Stew</h2>
-    <img src="../../images/ap/masortenga.jpg" alt=" Bamboo Stew">
+    <h2> Tunday Kabab</h2>
+    <img src="../../images/ap/masortenga.jpg" alt=" Tunday Kabab">
     <p>
-      Bamboo Stew is a traditional and nutritious dish popular among the tribes of Nagaland. It is made using tender bamboo shoots, often cooked with meat (like chicken or pork), local herbs, and spices.
+        Tunday Kabab is a legendary Mughlai delicacy from Lucknow, the city of Nawabs. Famous for its ultra-soft texture and aromatic spices, it is a variety of galouti kabab—originally created for a toothless Nawab who desired meat that required no chewing.
 
-The bamboo gives the stew a slightly tangy flavor and a unique aroma. It is valued not just for its taste but also for its digestive and medicinal properties.
+Made with finely minced buffalo or lamb meat (sometimes chicken), the kababs are blended with over 100 exotic spices, including rose water, kewra, cardamom, and saffron. What makes them unique is the secret family recipe passed down through generations since the 17th century.
 
-Usually served hot with steamed rice, Bamboo Stew is a perfect example of tribal cooking using fresh forest ingredients.
-    </p>
+The most iconic place to try it is the Tunday Kababi shop in Aminabad, Lucknow, which has become a cultural symbol of Awadhi cuisine. Served hot with rumali roti, mint chutney, and onions, every bite is soft, spicy, and full of royal flavor.
+
+Tunday Kabab isn’t just food—it’s a historic culinary experience that showcases the richness of Uttar Pradesh’s nawabi heritage.
+      </p>
   </div>
 
   
