--- a/marvals.html
+++ b/marvals.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-  <title>Marvals of Nagaland</title>
+  <title>Marvals of Uttar Pradesh</title>
   <style>
     body {
       font-family: 'Open Sans', sans-serif;
@@ -38,35 +38,56 @@
 </head>
 <body>
 
-  <h1>Famous Marvals of Nagaland</h1>
+  <h1>Famous Marvals of Uttar Pradesh </h1>
 
   <div class="marvals">
-    <h2>Kohima War Cemetery</h2>
-    <img src="../../images/ap/kaziringapaek.jpg "  alt="Kohima War Cemetery" width="400">
-     <p>
-        The Kohima War Cemetery is a historic memorial located in Kohima, Nagaland, dedicated to the soldiers of the Allied Forces who died in the Battle of Kohima during World War II (1944).
-
-Set on the slopes of Garrison Hill, the cemetery holds over 1,420 graves of brave soldiers, including Indians, British, and others. At the center lies the famous epitaph:
-
-“When You Go Home, Tell Them of Us and Say,
-For Your Tomorrow, We Gave Our Today.”
-
-Surrounded by serene greenery, it is a symbol of sacrifice, peace, and remembrance, visited by people from around the world.
+    <h2>Vindhyachal Hills</h2>
+    <img src="../../images/ap/kaziringapaek.jpg "  alt="Vindhyachal Hills" width="400">
 
 
-    </p>
+    <p>
+        The Vindhyachal Hills, located near Mirzapur in Uttar Pradesh, are not only a natural marvel but also a place of immense spiritual importance. These ancient hills are nestled along the banks of the holy River Ganga and are believed to be the mythological abode of Goddess Vindhyavasini, a powerful form of Maa Durga.
+
+At the heart of these hills lies the Vindhyavasini Devi Temple, one of the Shaktipeeths, where the goddess is worshipped in her fierce yet compassionate form. The temple draws thousands of pilgrims, especially during Navratri, when the hills echo with chants, devotion, and festivity.
+
+The surrounding region is filled with sacred spots like:
+
+Ashtabhuja Devi Temple – representing the eight-armed form of the goddess.
+
+Kali Khoh – a cave temple dedicated to Goddess Kali.
+
+Gerua Talab and Sita Kund – associated with legends from the Ramayana.
+
+Apart from its religious aura, the Vindhyachal Hills offer stunning views, forested paths, and a peaceful atmosphere—making it a blend of divinity, nature, and history.
+      </p>
   </div>
 
   <div class="marvals">
-    <h2> Japfu Peak</h2>
-    <img src="../../images/ap/majuli.jpg" alt=" Japfu Peak">
+    <h2>Okhla Bird Sanctuary</h2>
+    <img src="../../images/ap/majuli.jpg" alt=" Okhla Bird Sanctuary">
     <p>
-        Japfu Peak is the second-highest mountain in Nagaland, standing at 3,048 meters above sea level. Located near Kohima, it is part of the Dzüko Valley range and is a popular destination for trekkers and nature lovers.
+        Located at the Okhla Barrage on the Yamuna River, near Noida in Uttar Pradesh, the Okhla Bird Sanctuary is a serene escape into nature and one of the most important urban wetlands in North India. Spanning over 4 square kilometers, it is a paradise for bird watchers, nature lovers, and photographers.
 
-The peak is famous for being home to the world’s tallest rhododendron tree, which blooms beautifully during spring. From the top, visitors can enjoy panoramic views of valleys, forests, and far-off hills.
+This sanctuary is home to over 300 species of birds, including resident, migratory, and threatened species. During winter, it welcomes migratory birds from Tibet, Europe, and Siberia, making it a bustling avian hub.
 
-Japfu Peak is not just a scenic marvel but also a symbol of Nagaland’s natural beauty and biodiversity.
-    </p>
+Commonly spotted species include:
+
+Painted Stork
+
+White Ibis
+
+Black-winged Stilt
+
+Northern Shoveler
+
+Indian Cormorant
+
+Rare sightings like the Sarus Crane and Indian Skimmer
+
+Apart from birds, the sanctuary also supports wetland vegetation, reptiles, butterflies, and small mammals, contributing to its rich biodiversity.
+
+Located near the capital, Okhla Bird Sanctuary is a vital green lung and an educational treasure, showing how nature thrives even amidst urban life.
+       </p>
   </div>
 
  
