--- a/temples.html
+++ b/temples.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-  <title>Temples of Nagaland</title>
+  <title>Temples of Uttar Pradesh</title>
   <style>
     body {
       font-family: 'Open Sans', sans-serif;
@@ -38,39 +38,49 @@
 </head>
 <body>
 
-  <h1>Famous Temples of Nagaland</h1>
+  <h1>Famous Temples of Uttar Pradesh</h1>
 
   <div class="temple">
-    <h2>Dikhu Valley Shrine</h2>
-    <img src="../../images/ap/kamakhya.jpg" alt="Dikhu Valley Shrine" width="400">
+    <h2>Kashi Vishwanath</h2>
+    <img src="../../images/ap/kamakhya.jpg" alt="Kashi Vishwanath" width="400">
 
 
     <p>
-     Located in the serene landscape of Nagaland, the Dikhu Valley Shrine holds spiritual significance, 
-     especially for the Ao Naga tribe. Though not a traditional temple, this natural site is considered sacred, where locals offer prayers to nature and ancestral spirits. The Dikhu River flowing through the valley is believed to bring peace, fertility, and blessings. Surrounded by lush hills and calm waters, the shrine reflects the deep connection between the Naga people and nature.
+        Kashi Vishwanath Temple, located on the banks of the holy Ganga River in Varanasi, is one of the most sacred temples dedicated to Lord Shiva. Known as the “Golden Temple” of India, it is one of the 12 Jyotirlingas, making it a revered pilgrimage site for millions of devotees.
 
- 
+Kashi (Varanasi) is believed to be the oldest living city in the world, and the temple stands at its spiritual core. The presiding deity, Vishweshwara or Vishwanath, means “Lord of the Universe,” symbolizing Shiva’s infinite presence. The temple’s gold-plated spire and dome, added by Maharani Ahilyabai Holkar and later Maharaja Ranjit Singh, gleam in reverence to its sacredness.
+
+Thousands of pilgrims visit daily to perform rituals, aartis, and bathe in the Ganges before entering the sanctum. The air around the temple resonates with the chant “Har Har Mahadev,” uniting time, devotion, and spirituality.
+
+Kashi Vishwanath is not just a temple—it is the soul of Varanasi, where moksha (liberation) is believed to be granted to those who worship here with true devotion.
     </p>
   </div>
 
   <div class="temple">
-    <h2>Notun Bosti Church Temple</h2>
-    <img src="../../images/ap/Umananda.jpg" alt="Notun Bosti Church Temple">
+    <h2> Banke Bihari</h2>
+    <img src="../../images/ap/Umananda.jpg" alt=" Banke Bihari">
     <p>
-        Notun Bosti Church is a well-known Christian place of worship located in the Notun Bosti area of Dimapur, Nagaland. It serves as a spiritual center for many local families and is often referred to as a "church temple" due to its deep religious and social significance.
+        Banke Bihari Temple, located in the sacred town of Vrindavan, is one of the most cherished temples dedicated to Lord Krishna in his child-like, playful form known as Banke Bihari. The name "Banke" means bent in three places, and "Bihari" means enjoyer—symbolizing Krishna’s tribhanga posture as the divine flutist.
 
-The church plays a vital role in the spiritual lives of the Christian community, hosting regular services, prayer meetings, and Bible study sessions. Sundays are marked with devotion, hymns, and sermons. Major Christian festivals like Christmas, Good Friday, and Easter are celebrated with great enthusiasm, drawing people from surrounding areas.
-    </p>
+Built in the mid-19th century by Swami Haridas, the guru of legendary musician Tansen, the temple exudes an atmosphere of devotion, joy, and divine mischief. The deity here is not just worshipped but loved like a child, with no early morning aarti (as it may disturb the Lord’s sleep) and curtains drawn every few minutes to shield the intense gaze between the Lord and devotees.
+
+The temple comes alive during Janmashtami, Holi, and Jhulan Yatra, when Vrindavan echoes with bhajans, flowers, and colorful celebrations, capturing the essence of Krishna’s leelas (divine plays).
+
+Banke Bihari Temple is not just a place of worship—it is an emotional experience, where devotion flows like a melody, and every corner sings of Krishna’s eternal presence.
+   </p>
   </div>
 
   <div class="temple">
-    <h2>Tetsuo Memorial</h2>
-    <img src="../../images/ap/Navagraha.jpg" alt="Tetsuo Memorial">
+    <h2>Ayodhya Ram Mandir</h2>
+    <img src="../../images/ap/Navagraha.jpg" alt="Ayodhya Ram Mandir">
     <p>
-        The Tetsuo Memorial in Nagaland is a peaceful and sacred site built in memory of Rev. Tetsuo Sato, a Japanese missionary who played a significant role in spreading Christianity and promoting peace and social service among the Naga people. His contributions left a lasting impression on the community, and the memorial honors his dedication and love for the region.
+     The Ayodhya Ram Mandir, located in Ayodhya, Uttar Pradesh, is a sacred temple dedicated to Lord Ram, the seventh incarnation of Lord Vishnu. Revered as the birthplace of Shri Ram, this site holds immense spiritual, historical, and emotional significance for millions of Hindus around the world.
 
-The memorial is located amidst serene natural surroundings, offering a quiet place for reflection and prayer. It is often visited by locals and travelers who wish to pay respect to Rev. Tetsuo’s legacy. The peaceful environment reflects his gentle spirit and message of unity.
+The grand temple, built in Nagara-style architecture, symbolizes the resurgence of cultural heritage and devotion. Constructed with intricately carved sandstone and no steel or iron, it reflects timeless Indian craftsmanship. The sanctum houses the child form of Ram Lalla, who is worshipped with great love and reverence.
 
+The Ram Mandir project, inaugurated on January 22, 2024, stands not just as a physical structure but as a symbol of faith, unity, and the return of dharma (righteousness). Pilgrims from across the nation visit to witness the divine aartis, spiritual serenity, and the aura of this sacred land mentioned in the Ramayana.
+
+Ayodhya, known as the “City of Lord Rama,” is now a shining center of Sanatan Dharma, where the temple radiates peace, pride, and devotion.
 
     </p>
   </div>
