--- a/festivals.html
+++ b/festivals.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-  <title>Festivals of Odisha</title>
+  <title>Festivals of Uttar Pradesh</title>
   <style>
     body {
       font-family: 'Open Sans', sans-serif;
@@ -38,35 +38,37 @@
 </head>
 <body>
 
-  <h1>Famous Festivals of Odisha</h1>
+  <h1>Famous Festivals of Uttar Pradesh</h1>
 
   <div class="festivals">
-    <h2>Rath Yatra</h2>
-    <img src="../../images/ap/bihu.jpg" alt="Rath Yatra" width="400">
+    <h2>Diwali</h2>
+    <img src="../../images/ap/bihu.jpg" alt="Diwali" width="400">
   <p>
-  Rath Yatra is a world-famous Hindu festival celebrated every year in Puri, Odisha, in honor of Lord Jagannath, along with his siblings Balabhadra and Subhadra.
+    Diwali, also known as Deepavali, is one of the most celebrated and grand festivals in Uttar Pradesh, especially in cities like Ayodhya, Varanasi, and Lucknow. Symbolizing the victory of light over darkness and good over evil, it marks the return of Lord Ram to Ayodhya after 14 years of exile and his triumph over the demon king Ravana.
 
-During the festival, the deities are taken out of the Jagannath Temple and placed on huge wooden chariots, which are pulled by thousands of devotees through the streets to the Gundicha Temple.
+In Ayodhya, the celebration is breathtaking. The city lights up with lakhs of earthen diyas during “Deepotsav”, setting world records. The banks of the Saryu River glow as the air fills with chants, firecrackers, and festive joy.
 
-The event symbolizes Lord Jagannath's annual visit to his aunt's home and reflects devotion, unity, and joy. Millions of pilgrims and tourists from around the world attend this vibrant and spiritual celebration.
+People clean and decorate their homes with rangoli, lamps, and flowers, worship Goddess Lakshmi and Lord Ganesha, and share sweets with family and neighbors. Markets buzz with color, and temples sparkle with devotion.
 
-Rath Yatra is not just a festival — it’s an emotion and a moving temple on wheels.
+In Varanasi, the Ganga Aarti during Diwali becomes even more majestic, with floating lamps and fireworks lighting up the holy river.
 
-
-    </p>
+Diwali in Uttar Pradesh is not just a festival—it is a spiritual, visual, and emotional experience that brings communities together in a celebration of light, faith, and heritage.
+   </p>
   </div>
 
   <div class="festivals">
-    <h2>Nuakhai</h2>
-    <img src="../../images/ap/ambubachimela.jpg" alt="Nuakhai">
+    <h2> Holi</h2>
+    <img src="../../images/ap/ambubachimela.jpg" alt=" Holi">
     <p> 
-        Nuakhai is a traditional harvest festival celebrated in Western Odisha, especially in the Sambalpur region. The name means “Nua” (new) + “Khai” (food) — symbolizing the eating of newly harvested rice.
+        Holi, the festival of colors, is celebrated with unmatched energy and devotion in Uttar Pradesh, especially in Mathura, Vrindavan, Barsana, Nandgaon, and Lucknow. It marks the arrival of spring, the victory of good over evil, and the divine love of Radha and Krishna.
 
-Celebrated just after Ganesh Chaturthi, it is a day of community bonding, gratitude to nature, and respect to elders. People offer the first grain of the harvest to the family deity and then enjoy a festive meal together.
+In Mathura and Vrindavan, Holi becomes a spiritual spectacle. Temples come alive with music, dance, and color-splashing rituals. Devotees chant bhajans, throw gulal (colored powder), and reenact Krishna’s playful pastimes with Radha and the gopis.
 
-Nuakhai reflects the agrarian roots, cultural pride, and unity of the people of Odisha.
+One of the most unique traditions is Lathmar Holi in Barsana and Nandgaon, where women playfully hit men with sticks while singing and dancing—a joyful reenactment of Radha-Krishna’s teasing moments.
 
+In cities like Lucknow and Varanasi, Holi is celebrated with color throwing, sweets like gujiya, thandai (often laced with bhang), and cultural gatherings. It is a day when social boundaries blur, and people unite in laughter, music, and vibrant celebration.
 
+Holi in Uttar Pradesh is more than just a festival—it’s a colorful expression of devotion, unity, and the eternal bond of love and joy.
     </p>
   </div>
 
